@startuml
'https://plantuml.com/es/class-diagram

class Flashcard{
-String uuid
-String front
-String answer

+isValidFront()
+isValidAnswer()
+getUuid()
+setUuid()
+getFront()
+setFront()
+getAnswer()
+setAnswer()

}
class Quiz{
+{static}final int MAX_DESCRIPTION_LENGTH
-String uuid
-String name
-String description
-List<Flashcard> flashcards
+{static}isValidName()
+{static}isValidDescription()
+addFlashcards()
+getUuid()
-setUuid()
+addFlashcard()
+removeFlashcard()
+getName()
+setName()
+getDescription()
+setDescription()
+getFlashcard()
+setFlashcard()
}
class User{
-final List<Quiz> quizzes
-String username
-String password
+{static}isValidUsername()
+{static}isValidPassword()
+getQuizzes()
+updateQuiz()
+setUsername()
+getPassword()
+setPassword()
+addQuiz()
+removeQuiz()
}
class Tools{
+{static}capitalize()
+{static}createUuid()
+{static}isValidUuid()
}

class CognitionStorage{
-final Gson gson
-Path storagePath
+readUsers()
-writeToJson()
+create()
+read()
-updateUser()
+update()
+delete()
+setStoragePath()
+isEmpty()
-createDirectoryIfNotExists()
}

class Comp

User ||--o{ Quiz: owns
Quiz ||--|{ Flashcard: owns

Quiz --> Tools :uses
Flashcard --> Tools: uses
CognitionStorage --> User: uses
@enduml

